--- a/index.html
+++ b/index.html
@@ -3,21 +3,18 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>دانلود AirMasif</title>
-
+<title>دانلود AirMasif و YouTube</title>
 <style>
-body{
+body {
     margin:0;
     font-family:Tahoma, sans-serif;
     background: linear-gradient(135deg,#141e30,#243b55);
     color:white;
     text-align:center;
 }
-
 .container{
     padding:40px 15px;
 }
-
 .card{
     background:white;
     color:#333;
@@ -27,14 +24,67 @@ body{
     border-radius:20px;
     box-shadow:0 15px 40px rgba(0,0,0,0.4);
 }
-
 h1{
     margin-top:0;
 }
-
 .version{
     color:gray;
     font-size:14px;
+}
+button{
+    background:#243b55;
+    color:white;
+    border:none;
+    padding:15px 30px;
+    font-size:18px;
+    border-radius:12px;
+    cursor:pointer;
+    transition:0.3s;
+    margin-top:10px;
+}
+button:hover{
+    background:#141e30;
+}
+.footer{
+    margin-top:30px;
+    font-size:12px;
+    color:#ccc;
+}
+</style>
+</head>
+<body>
+<div class="container">
+    <div class="card">
+        <h1>📱 دانلود اپلیکیشن‌ها</h1>
+
+        <!-- نسخه 1 -->
+        <p>نسخه رسمی AirMasif</p>
+        <p class="version">Version 1.0.0</p>
+        <a href="AirMasif.apk" download>
+            <button>⬇ دانلود AirMasif</button>
+        </a>
+
+        <br><br>
+
+        <!-- نسخه 2 -->
+        <p>نسخه رسمی YouTube</p>
+        <p class="version">Version 1.0.0</p>
+        <a href="YouTube.apk" download>
+            <button>⬇ دانلود YouTube</button>
+        </a>
+
+        <br><br>
+        <p style="font-size:12px;color:gray;">
+        در صورت نمایش هشدار امنیتی، گزینه Install Anyway را انتخاب کنید.
+        </p>
+    </div>
+
+    <div class="footer">
+        © 2026 AirMasif & YouTube
+    </div>
+</div>
+</body>
+</html>    font-size:14px;
 }
 
 button{
